# todo-project

./: README.md  database.py  database.sqlite  main.py  model.py  pyproject.toml
frontend/: package.json
frontend/src/: App.css  App.jsx  index.css
