# pyproject.toml

[tool.poetry]
name = "todo-project"
version = "0.1.0"
description = ""
authors = ["YuyaMizuma <mizuma.yuya.2003@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12"
fastapi = ">=0.116.1,<0.117.0"
uvicorn = {version = ">=0.35.0,<0.36.0", extras = ["standard"]}
sqlmodel = ">=0.0.24,<0.0.25"
gunicorn = ">=23.0.0,<24.0.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"
black = "^25.1.0"
pytest = "^8.4.1"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]